--- a/Ahmad_UI_stableTech/style.css
+++ b/Ahmad_UI_stableTech/style.css
@@ -228,20 +228,20 @@ position: relative; top: -69px;
 }
 
 #My {
-    background-color: blue;
+    background-color: rgb(255, 157, 0);
 }
 
 #Add {
-    background-color: blue;
+    background-color: rgb(255, 157, 0);
 }
 
 #Edit {
-    background-color: blue;
+    background-color: rgb(255, 157, 0);
     width:90px;
 }
 
 #Remove {
-    background-color: blue;
+    background-color:rgb(255, 157, 0);
 }
 
 table, td, th {
@@ -284,13 +284,14 @@ table, td, th {
    width: 8px;
    height: 8px;
    border-radius: 50%;
-   background: white;
+   background-color: white;
 }
 
 #Schedule4 {
 
-    margin-left: 50%;
-    background-color: blue;
+    margin-left: 46%;
+    background-color: rgb(255, 157, 0);
     margin-top: 25px;
 
 }
+
