--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #7f7d7d !important;
+  background: #a9a9a9 !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
@@ -18,8 +18,11 @@ body, html, .App, #root, .auth-wrapper {
   height: 100%;
 }
 .navbar-light {
-  background-color: #ffffff;
+  background-color: #7f7d7d;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
+
 }
 .auth-wrapper {
   display: flex;
